Fix the issue with submenu container and menu having a gap between them

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -295,3 +295,9 @@ $dark-blue: #294374;
     }
   }
 }
+
+@include media-breakpoint-up(lg) {
+  .MainMenu__submenu-container {
+    top: 2.5rem !important;
+  }
+}
